--- a/layout.css
+++ b/layout.css
@@ -63,7 +63,8 @@ padding:40px 0;
 .cv-section-title {
 color:#346699;
 line-height:18px;
-margin:0 0 40px;
+margin:20px 0 20px;
+font-weight: 500;
 }
 
 .cv-item-description {
@@ -72,7 +73,7 @@ text-align:right;
 
 .cv-item-description h6 {
 line-height:24px;
-margin-bottom:10px;
+margin-bottom:2px;
 text-transform:uppercase;
 background-color:#f5f5f5;
 -webkit-border-radius:5px;
@@ -81,15 +82,15 @@ padding:0 10px;
 }
 
 .highlight {
-background-color:#f5f5f5;
+border:2px solid #f5f5f5;
 -webkit-border-radius:5px;
 border-radius:5px;
-padding:0 10px;
+padding:0 5px;
 }
 
 .cv-item-details h4 {
 line-height:22px;
-margin-bottom:12px;
+margin-bottom:4px;
 }
 
 .skill h4 {
@@ -392,7 +393,8 @@ padding:0;
 .wrap {
 -webkit-box-shadow:none;
 box-shadow:none;
-padding:40px 80px;
+margin:0px auto;
+padding:20px 20px;
 }
 
 .level {
@@ -413,9 +415,7 @@ width:100%;
 float:none;
 }
 
-.skill p,#contact-form,.contact-info-2 .hide-on-phone {
-display:none;
-}
+
 }
 
 @media only screen and max-width1024px {
