--- a/layout.css
+++ b/layout.css
@@ -88,6 +88,13 @@ border-radius:5px;
 padding:0 5px;
 }
 
+.highlight2 {
+border:2px solid #f5f5f5;
+-webkit-border-radius:5px;
+border-radius:5px;
+padding:0 5px;
+}
+
 .cv-item-details h4 {
 line-height:22px;
 margin-bottom:4px;
