--- a/layout.css
+++ b/layout.css
@@ -45,8 +45,13 @@ margin-bottom:0;
 }
 
 .contact-info {
+font-size:10px;
 list-style:none;
 margin-bottom:0;
+}
+
+.contact-info li {
+  margin: 0 0 0 0;
 }
 
 .cv-profile {
@@ -63,7 +68,7 @@ padding:40px 0;
 .cv-section-title {
 color:#346699;
 line-height:18px;
-margin:20px 0 20px;
+margin:10px 0 10px;
 font-weight: 500;
 }
 
