--- a/layout.css
+++ b/layout.css
@@ -96,7 +96,7 @@ font-size:12px;
 
 .highlight {
   border:1px solid #dbe3eb;
-background-color: #fdfdfd;
+background-color: #ecf2f8;
 -webkit-border-radius:3px;
 border-radius:3px;
 padding:0 1px 0 1px;
